# Open-GroundingDino

./: MANIFEST.in  pyproject.toml  requirements.txt  setup.py
open_groundingdino/datasets/: coco.py
open_groundingdino/models/GroundingDINO/ops/: setup.py
